// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
.css-msxlra,
[data-css-msxlra] {
  left: -10px;
  position: relative;
  top: -10px;
}

.css-msxlra > div,
[data-css-msxlra] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  position: absolute;
  -webkit-animation-fill-mode: both;
}

<BallSpinFadeLoader
  loading={true}
>
  <div
    data-css-msxlra=""
  >
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
  </div>
</BallSpinFadeLoader>
`;

exports[`enzyme.render 1`] = `
.css-msxlra,
[data-css-msxlra] {
  left: -10px;
  position: relative;
  top: -10px;
}

.css-msxlra > div,
[data-css-msxlra] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  position: absolute;
  -webkit-animation-fill-mode: both;
}

<div
  data-css-msxlra=""
>
  <div />
  <div />
  <div />
  <div />
  <div />
  <div />
  <div />
  <div />
</div>
`;

exports[`enzyme.shallow 1`] = `
.css-msxlra,
[data-css-msxlra] {
  left: -10px;
  position: relative;
  top: -10px;
}

.css-msxlra > div,
[data-css-msxlra] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  position: absolute;
  -webkit-animation-fill-mode: both;
}

<div
  data-css-msxlra=""
>
  <div />
  <div />
  <div />
  <div />
  <div />
  <div />
  <div />
  <div />
</div>
`;
